--- a/user-service/userservice-dev.yml
+++ b/user-service/userservice-dev.yml
@@ -1,1 +1,10 @@
-message: "New meesage"
+message: "New message"
+
+spring:
+  profiles: dev
+  
+  datasource:
+    url: jdbc:mysql://mysql-server:3306/user_service
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
