--- a/userservice/userservice.yml
+++ b/userservice/userservice.yml
@@ -3,7 +3,7 @@ message: "I'm a config file from git repository."
 spring:
   
   datasource:
-    url: jdbc:mysql://mysql-server:3306/user_service
+    url: jdbc:mysql://${DOCKER_MACHINE_IP:mysqlserver}:3306/user_service
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
@@ -21,12 +21,15 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-        defaultZone: http://discovery-service:8761/eureka/
+        defaultZone: http://${DOCKER_MACHINE_IP:discoveryservice}:8761/eureka/
 
 server:
   contextPath:   /auth
-  port: 8091
+  port: ${APP_PORT:8080}
+  
+security.oauth2.resource.filter-order: 3
 
 axon:
   cluster-name: ${spring.application.name}
-    
+
+signing.key: “front-end-signing-key”
