--- a/edgeservice/edgeservice-development.yml
+++ b/edgeservice/edgeservice-development.yml
@@ -26,7 +26,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://discoveryservice:8761/eureka/
 management:
   security:
     enabled: false
